assets/css/style_base.css
/* ... */
/* Profile Results */
#profile-list {
	font-size: 0;
	clear: both;
}
#profile-list .rbprofile-list {
	padding: 7px;
	font-size: initial;
	margin-bottom: 15px;
	position: relative;
	vertical-align: top;
	display: inline-block;
	box-sizing: border-box;
	line-height: normal;
}
#profile-list .rbprofile-list .image {	
	position: relative;
	overflow: hidden;
}
#profile-list .rbprofile-list .image img {
	border: none;
	border-radius: 0;
	box-shadow: none;
	max-width: 100%;
}
#profile-list .rbprofile-list .image .name {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 5px;
}
#profile-list .rbprofile-list .profile-info {
	padding: 5px 0px;
	clear: both;
}
#profile-list .rbprofile-list .profile-info .details {
	font-size: small;
}
#profile-list .rbprofile-list .profile-info .details > span,
#profile-list .rbprofile-list .profile-info .details-merged > span {
	display: block;
	word-wrap: break-word;
}
#profile-list .details-age > span {
	white-space: nowrap;
}
#profile-list .rbprofile-list .profile-info .name {
	margin: 0;
	overflow: hidden;
	line-height: normal;	
}
#profile-list .rbprofile-list .profile-info .name a {
	text-decoration: none;
	display: inline-block;
}
#profile-list .name-pos-1 .name {
	position: absolute;
	left: 0px;
	right: 0px;
	bottom: 0px;
	padding: 10px;
	z-index: 5;
	background: rgba(0,0,0,0.7)
}
#profile-list .name-pos-2 .profile-info {	
	padding: 10px;
	background: rgba(0,0,0,0.7)
}

/* Voiceover */
#profile-categories {
	text-align: center;
	margin: 30px 0;
}
#profile-categories a {
	font-size: larger;
	font-weight: bold;
	margin-right: 15px;
}
#profile-list.voiceover {
	margin: 0 -1px;
}
#profile-list.voiceover .rbprofile-list {
	padding: 1px;
	margin-bottom: 0;
}
#profile-list.voiceover .profile-voiceover {
	float: left;
	width: 100%;
	padding: 5px 6px;
	position: relative;
}
#profile-list.voiceover .profile-voiceover ul {
	float: right;
	margin: 0;
	padding: 0;
}
#profile-list.voiceover .profile-voiceover ul li {
	float: left;
}
#profile-list.voiceover .profile-voiceover ul li i.fa-bars {
	float: left;
	margin-left: 5px;
	padding: 3px 5px;
	background: #ddd;
	border-radius: 3px;
}
#profile-list.voiceover .profile-voiceover ul li a {
	float: left;
	margin-bottom: 0;
	padding: 3px 5px;
	border-radius: 3px;
	display: inline-block;
}
#profile-list.voiceover .profile-voiceover ul li:last-child {
	margin-right: 0;
}
#profile-list.voiceover .profile-voiceover ul.links > li:last-child {
	float: right;
}
#profile-list.voiceover .profile-voiceover ul li a i,
#profile-list.voiceover .profile-voiceover ul li a img {
	float: left;
}
#profile-list.voiceover .profile-voiceover ul li.voices ul {
	left: 0;
	right: 0;
	top: 100%;
	z-index: 2;
	height: auto;
	padding: 5px;
	display: none;
	background: #fff;
	position: absolute;
	border-radius: 3px;
	border: 1px solid #ddd;
}
#profile-list.voiceover .profile-voiceover ul li.voices ul li {
	font-size: small;
}

/* Profiles Per Row */
.boxcover {
	margin: 0;
	list-style: none;
}
.boxcover li {
	float: left;
}
.boxcover.one-cols li,
.boxcover.two-cols li:nth-child(2n+0),
.boxcover.three-cols li:nth-child(3n+0),
.boxcover.four-cols li:nth-child(4n+0),
.boxcover.five-cols li:nth-child(5n+0),
.boxcover.six-cols li:nth-child(6n+0),
.boxcover.seven-cols li:nth-child(7n+0),
.boxcover.eight-cols li:nth-child(8n+0),
.boxcover.nine-cols li:nth-child(9n+0),
.boxcover.ten-cols li:nth-child(10n+0) {
	padding-right: 0;
}
#profile-list.one-profiles .rbprofile-list,
.boxcover.one-cols li {
	width: 100%;
	padding-right: 0px;
}#profile-list.two-profiles .rbprofile-list,
.boxcover.two-cols li {
	width: 50%;	
}#profile-list.three-profiles .rbprofile-list,
.boxcover.three-cols li {
	width: 33.33333333333333%;
}#profile-list.four-profiles .rbprofile-list,
.boxcover.four-cols li {
	width: 25%;
}#profile-list.five-profiles .rbprofile-list,
.boxcover.five-cols li {
	width: 20%;
}#profile-list.six-profiles .rbprofile-list,
.boxcover.six-cols li {
	width: 16.66666666666667%;
}#profile-list.seven-profiles .rbprofile-list,
.boxcover.seven-cols li {
	width: 14.28571428571429%;
}#profile-list.eight-profiles .rbprofile-list,
.boxcover.eight-cols li {
	width: 12.5%;
}#profile-list.nine-profiles .rbprofile-list,
.boxcover.nine-cols li {
	width: 11.11111111111111%;
}#profile-list.ten-profiles .rbprofile-list,
.boxcover.ten-cols li {
	width: 10%;
}
#profile-list.four-profiles .thumbslide .image img {
	position: absolute;
}
#profile-list.two-profiles .rbprofile-list:nth-child(even) {
	padding-right: 0px;
}
#profile-list.one-profiles .rbprofile-list .profile-box {
	float: left;
}

/*Profile List Layout 01*/
#profile-list .rbprofile-list.-list-layout-1 { padding: 0px; }
.info-panel { float: left; width: 100%; margin-bottom: 15px; }
.info-panel .info ul { font-size: small; list-style: none; }
.info-panel .info ul li { margin: 0; display: inline-block; margin-right: 10px; }
.info-panel .info,
.info-panel .profile-pic { float: left; width: 50%; padding: 0 15px; box-sizing: border-box; }

/* Featured Profile Widget */
#profile-featured {
	text-align: center;
}
#profile-featured img {
	max-width: 100%;
}

/* RBLinks */
.rblinks {
	clear: both;
	font-size: 13px;
	padding: 15px 0;
	overflow: hidden;
}
.rblinks .rbprint-download {
	float: left;
}
.rblinks .rbfavorites-castings {
	float: right;
}

/*  */
#profile-results-info {
	float: right;
	padding: 5px 0px;
}
#results-options {
	float: left;
}
#results-info {
	float: right;
	text-align: right;
}
.rbsort {
	margin-bottom: 10px;
}
.rbsort select {
	margin-left: 0;
	margin-right: 5px;
	border-radius: 3px;
}
.rbfilter-letter {	
	margin-top: 15px;	
	padding: 5px 10px;
	border-radius: 3px;
	background: #eee;
}
.rbfilter-letter a {
	padding: 5px;
}
.rb-search-result-links a {
	  background: #999;
	  border: none;
	  padding: 5px 15px;
	  border-radius: 3px;
	  font-weight: bold;
	  margin-bottom: 10px;
}

/* Pagination */
.rbpagination-top {
	margin-top: 15px;
}
/* ... */

